wip on landing page

--- a/scss/core.scss
+++ b/scss/core.scss
@@ -22,4 +22,4 @@ TABLE OF CONTENTS
 @import 'partials/features';
 @import 'partials/buttons';
 @import 'partials/pageloader';
-@import 'partials/particles';
+//@import 'partials/particles';
