--- a/html/layouts/default.html
+++ b/html/layouts/default.html
@@ -7,6 +7,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
 
         <title> Krypton :: {{title}}</title>
+        <link rel="icon" type="image/png" href="assets/images/favicon.png" />
         
         <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
@@ -23,5 +24,6 @@
         {{> scripts}}
         
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     </body>  
 </html>
