--- a/scss/partials/_theme-default.scss
+++ b/scss/partials/_theme-default.scss
@@ -16,9 +16,10 @@ TABLE OF CONTENTS
 0. Color Variables
 ========================================================================== */
 
-$primary: #4e00d1;
-$secondary: #00D1B2;
-$accent: #7F00FF;
+$primary: #7F00FF;
+$primary-accent: #3f00fc;
+$secondary: #00ff99;
+$secondary-accent: #33ccff;
 
 /* ==========================================================================
 1. Shadow variables
@@ -28,16 +29,11 @@ $accent: #7F00FF;
 $base-shadow: rgba(0, 0, 0, 0.12);
 
 //Primary box shadow
-$primary-shadow-from: rgba(0, 35, 255, 0.42);
-$primary-shadow-to: rgba(0, 35, 255, 0.2);
+$primary-shadow-from: rgba(127, 0, 255, 0.42);
+$primary-shadow-to: rgba(63, 0, 252, 0.2);
 $primary-box-shadow:  0 14px 26px -12px $primary-shadow-from, 0 4px 23px 0px $base-shadow, 0 8px 10px -5px $primary-shadow-to !important;
 
 //Secondary box shadow
-$secondary-shadow-from: rgba(0, 209, 178, 0.42);
-$secondary-shadow-to: rgba(0, 209, 178, 0.2);
+$secondary-shadow-from: rgba(0, 255, 153, 0.42);
+$secondary-shadow-to: rgba(51, 204, 255, 0.2);
 $secondary-box-shadow:  0 14px 26px -12px $secondary-shadow-from, 0 4px 23px 0px $base-shadow, 0 8px 10px -5px $secondary-shadow-to !important;
-
-//Accent box shadow
-$accent-shadow-from: rgba(127, 0, 255, 0.42);
-$accent-shadow-to: rgba(127, 0, 255, 0.2);
-$accent-box-shadow:  0 14px 26px -12px $accent-shadow-from, 0 4px 23px 0px $base-shadow, 0 8px 10px -5px $accent-shadow-to !important;
