finished tabs, added timeline, added video button

--- a/html/includes/scripts.html
+++ b/html/includes/scripts.html
@@ -3,4 +3,5 @@
 
 
 <script src="{{ root }}assets/js/timer.js"></script>
+<script src="{{ root }}assets/js/timeline.js"></script>
 <script src="{{ root }}assets/js/main.js"></script>
