--- a/scss/partials/_animations.scss
+++ b/scss/partials/_animations.scss
@@ -42,3 +42,41 @@
     -webkit-animation-name: fadeInUp;
     animation-name: fadeInUp;
 }
+
+/* ==========================================================================
+12. Levitate animation
+========================================================================== */
+
+//Keyframes
+@-webkit-keyframes levitate {
+    from {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0); }
+    50% {
+        -webkit-transform: translate(0, 10px);
+        transform: translate(0, 10px); }
+    to {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0); } }
+
+@keyframes levitate {
+    from {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0); }
+    50% {
+        -webkit-transform: translate(0, 10px);
+        transform: translate(0, 10px); }
+    to {
+        -webkit-transform: translate(0, 0);
+        transform: translate(0, 0); } }
+//Settings
+.levitate {
+    -webkit-animation-name: levitate;
+    animation-name: levitate;
+    -webkit-animation-duration: 3s;
+    animation-duration: 3s;
+    -webkit-animation-iteration-count: infinite;
+    animation-iteration-count: infinite;
+    -webkit-animation-timing-function: ease-in-out;
+    animation-timing-function: ease-in-out;
+}
