--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -217,7 +217,7 @@ body {
     }
 }
 
-#big-gradient {
+.has-big-gradient {
     background: url(../images/bg/gradient-left.png) no-repeat top left,url(../images/bg/gradient-right.png) no-repeat top right,#320184;
 }
 
