--- a/html/layouts/default.html
+++ b/html/layouts/default.html
@@ -9,14 +9,15 @@
         <title> Krypton :: {{title}}</title>
         <link rel="icon" type="image/png" href="assets/images/favicon.png" />
         
-        <link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet">
+        <!--link href="https://fonts.googleapis.com/css?family=Fira+Sans:400,500,600" rel="stylesheet"-->
         <link href="https://fonts.googleapis.com/css?family=Cabin" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400" rel="stylesheet">
 
         <!--Core CSS -->
         <link rel="stylesheet" href="{{root}}assets/css/bulma.css">
         <link rel="stylesheet" href="{{root}}assets/css/core.css">
         <!--Libraries-->
+        <link rel="stylesheet" href="{{root}}assets/fonts/cryptofont/css/cryptofont.min.css">
 
     </head>
     <body>
