--- a/scss/core.scss
+++ b/scss/core.scss
@@ -21,5 +21,6 @@ TABLE OF CONTENTS
 @import 'partials/layout';
 @import 'partials/features';
 @import 'partials/buttons';
+@import 'partials/timeline';
 @import 'partials/pageloader';
 @import 'partials/animations';
