added app section, started team section

--- a/html/layouts/default.html
+++ b/html/layouts/default.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="{{root}}assets/css/core.css">
         <!--Libraries-->
         <link rel="stylesheet" href="{{root}}assets/fonts/cryptofont/css/cryptofont.min.css">
+        <link rel="stylesheet" href="{{root}}assets/js/modalvideo/modal-video.min.css">
 
     </head>
     <body>
