--- a/scss/core.scss
+++ b/scss/core.scss
@@ -22,5 +22,6 @@ TABLE OF CONTENTS
 @import 'partials/features';
 @import 'partials/buttons';
 @import 'partials/timeline';
+@import 'partials/team';
 @import 'partials/pageloader';
 @import 'partials/animations';
