--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -207,6 +207,9 @@ body {
     &.is-darkest {
         background: #270068;
     }
+    &.is-end {
+        background: #1c004c;
+    }
     .hero-square-2 {
         width: 100%;
         height: 100%;
